--- a/001-recipes/recipes/template.html
+++ b/001-recipes/recipes/template.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
-    <link rel="stylesheet" href="sources.css">
+    <title>Odin Recipes - Recipe Template</title>
+    <link rel="stylesheet" href="../sources.css">
 </head>
 <body>
-    <h1 class="title">Odin Recipes</h1>
+    <h1 class="title">Recipe Template</h1>
     <div class="content">
         <ul>
-            <li><a class="link" href="./recipes/template.html">Example Recipe</a></li>
+            <li><a class="link" href="../index.html">Back</a></li>
         </ul>
     </div>
 </body>
