Improve visual consistency between sections

--- a/001-recipes/recipes/template.html
+++ b/001-recipes/recipes/template.html
@@ -27,27 +27,23 @@
     </div>
 
     <div class="recipe">
-        <ul class="ingredients">
+        <div class="ingredients">
             <h3>Ingredients</h3>
-            <li>
-                For the nitamago (soft-boiled eggs):
-                <ul>
-                    <li>2 large eggs</li>
-                    <li>1/4 cup soy sauce</li>
-                    <li>1/4 cup water</li>
-                    <li>2 tbsp mirin</li>
-                </ul>
-            </li>
+            <h4>For the nitamago (soft-boiled eggs):</h4>
+            <ul>
+                <li>2 large eggs</li>
+                <li>1/4 cup soy sauce</li>
+                <li>1/4 cup water</li>
+                <li>2 tbsp mirin</li>
+            </ul>
 
-            <li>
-                For the noodles and toppings:
-                <ul>
-                    <li>8 oz fresh ramen noodles</li>
-                    <li>2 green onions, green part only</li>
-                    <li>2 sheets nori</li>
-                </ul>
-            </li>
-        </ul>
+            <h4>For the noodles and toppings:</h4>
+            <ul>
+                <li>8 oz fresh ramen noodles</li>
+                <li>2 green onions, green part only</li>
+                <li>2 sheets nori</li>
+            </ul>
+        </div>
 
         <div class="instructions">
             <h3>Instructions</h3>
