Divide webpage into three main sections

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -12,6 +12,14 @@
   <link rel="stylesheet" href="./sources.css">
 </head>
 <body>
+  <div class="header header-dark-bg">
 
+  </div>
+  <div class="content">
+
+  </div>
+  <div class="footer footer-dark-bg">
+
+  </div>
 </body>
 </html>
