Add header content and apply centering

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -12,8 +12,17 @@
   <link rel="stylesheet" href="./sources.css">
 </head>
 <body>
-  <div class="header header-dark-bg">
-
+  <div class="header centering header-dark-bg">
+    <div class="container with-max-width">
+      <nav>
+        <div class="logo">Header Logo</div>
+        <ul class="links">
+          <li><a>header link one</a></li>
+          <li><a>header link two</a></li>
+          <li><a>header link three</a></li>
+        </ul>
+      </nav>
+    </div>
   </div>
   <div class="content">
 
