Make header links clickable

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -15,11 +15,11 @@
   <div class="header centering header-dark-bg">
     <div class="container with-max-width">
       <nav>
-        <div class="logo">Header Logo</div>
+        <div class="header-logo-text">Header Logo</div>
         <ul class="links">
-          <li><a>header link one</a></li>
-          <li><a>header link two</a></li>
-          <li><a>header link three</a></li>
+          <li><a href="#" class="header-link-text">header link one</a></li>
+          <li><a href="#" class="header-link-text">header link two</a></li>
+          <li><a href="#" class="header-link-text">header link three</a></li>
         </ul>
       </nav>
     </div>
