--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -22,6 +22,16 @@
           <li><a href="#" class="header-link-text">header link three</a></li>
         </ul>
       </nav>
+      <div class="hero">
+        <div class="text">
+          <div class="hero-main-text">This website is awesome</div>
+          <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+          <button class="sign-up">Sign up</button>
+        </div>
+        <div class="image">
+          <div class="image-text">this is a placeholder for an image</div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="content">
