Add text formatting

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -29,7 +29,7 @@
           <button class="sign-up">Sign up</button>
         </div>
         <div class="image">
-          <div class="image-text">this is a placeholder for an image</div>
+          <div class="hero-secondary-text">this is a placeholder for an image</div>
         </div>
       </div>
     </div>
