Add feature section content

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -35,7 +35,29 @@
     </div>
   </div>
   <div class="content">
-
+    <div class="feature centering">
+      <div class="container with-max-width">
+        <h2 class="information">Some random information.</h2>
+        <div class="cards">
+          <div class="card">
+            <div class="card-image"></div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+          </div>
+          <div class="card">
+            <div class="card-image"></div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+          </div>
+          <div class="card">
+            <div class="card-image"></div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+          </div>
+          <div class="card">
+            <div class="card-image"></div>
+            <div class="card-text">this is some subtext under an illustration or image</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="footer footer-dark-bg">
 
