--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -61,7 +61,7 @@
     <div class="quote centering quote-light-bg">
       <div class="container with-max-width">
         <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="attribution">-Thor, God of Thunder</div>
+        <div class="quote-attribution">-Thor, God of Thunder</div>
       </div>
     </div>
   </div>
