Add call-to-action section content

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -64,6 +64,15 @@
         <div class="quote-attribution">-Thor, God of Thunder</div>
       </div>
     </div>
+    <div class="call-to-action centering">
+      <div class="container with-max-width">
+        <div class="text">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="sign-up">Sign up</button>
+      </div>
+    </div>
   </div>
   <div class="footer footer-dark-bg">
 
