Apply narrower width to content section
The target design has a consistently narrower width for all items in the
content section. The previous html used the `with-max-width` class to
apply the same width to all page content. Now, I would like to modify
all sections within the content section to use a new class:
`with-section-width`.

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -36,7 +36,7 @@
   </div>
   <div class="content">
     <div class="feature centering">
-      <div class="container with-max-width">
+      <div class="container with-section-width">
         <h2 class="information">Some random information.</h2>
         <div class="cards">
           <div class="card">
