--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -59,18 +59,20 @@
       </div>
     </div>
     <div class="quote centering quote-light-bg">
-      <div class="container with-max-width">
+      <div class="container with-section-width">
         <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="quote-attribution">-Thor, God of Thunder</div>
       </div>
     </div>
     <div class="call-to-action centering">
-      <div class="container with-max-width">
-        <div class="text">
-          <h3>Call to action! It's time!</h3>
-          <p>Sign up for our product by clicking that button right over there!</p>
+      <div class="container with-max-width background">
+        <div class="container with-section-width">
+          <div class="text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button class="sign-up">Sign up</button>
         </div>
-        <button class="sign-up">Sign up</button>
       </div>
     </div>
   </div>
