Add footer content and styling

--- a/002-landing-page/index.html
+++ b/002-landing-page/index.html
@@ -76,8 +76,8 @@
       </div>
     </div>
   </div>
-  <div class="footer footer-dark-bg">
-
+  <div class="footer centering footer-dark-bg">
+    <p>Copyright © The Odin Project 2021</p>
   </div>
 </body>
 </html>
