Outline solution using comment-code

--- a/003-rock-paper-scissors/index.html
+++ b/003-rock-paper-scissors/index.html
@@ -12,5 +12,6 @@
         To play, open your browser's console with
         <kbd><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>J</kbd></kbd>.
     </p>
+    <script src="./sources.js"></script>
 </body>
 </html>
