Defer start of game until user is ready

--- a/003-rock-paper-scissors/index.html
+++ b/003-rock-paper-scissors/index.html
@@ -12,6 +12,7 @@
         To play, open your browser's console with
         <kbd><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>J</kbd></kbd>.
     </p>
+    <button>Start</button>
     <script src="./sources.js"></script>
 </body>
 </html>
