--- a/003-rock-paper-scissors/index.html
+++ b/003-rock-paper-scissors/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h2>Rock, Paper, Scissors!</h2>
-    <p>
-        To play, open your browser's console with
-        <kbd><kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>J</kbd></kbd>.
-    </p>
-    <button>Start</button>
+    <div class="flex-column">
+        <h2>Select your choice</h2>
+        <div class="buttons flex">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+        <div class="results flex">
+            <div class="stats">No game history.</div>
+        </div>
+    </div>
     <script src="./sources.js"></script>
 </body>
 </html>
