Decouple button id and text content

--- a/003-rock-paper-scissors/index.html
+++ b/003-rock-paper-scissors/index.html
@@ -10,9 +10,9 @@
     <div class="flex-column">
         <h2>Select your choice</h2>
         <div class="buttons flex">
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
         </div>
         <div class="results flex">
             <div class="stats">No game history.</div>
