--- a/003-rock-paper-scissors/index.html
+++ b/003-rock-paper-scissors/index.html
@@ -15,8 +15,9 @@
             <button id="scissors">Scissors</button>
         </div>
         <div class="results flex">
-            <div class="stats">No game history.</div>
+            <div class="round-result">No game history.</div>
         </div>
+        <div class="outcome-history"></div>
     </div>
     <script src="./sources.js"></script>
 </body>
