Save and display outcome history

--- a/003-rock-paper-scissors/index.html
+++ b/003-rock-paper-scissors/index.html
@@ -15,9 +15,12 @@
             <button id="scissors">Scissors</button>
         </div>
         <div class="results flex">
-            <div class="round-result">No game history.</div>
+            <div class="round-result monospace">No game history.</div>
         </div>
-        <div class="outcome-history"></div>
+        <div class="history flex">
+            <div class="round-number monospace"></div>
+            <div class="outcome-history monospace"></div>
+        </div>
     </div>
     <script src="./sources.js"></script>
 </body>
