--- a/004-etch-a-sketch/index.html
+++ b/004-etch-a-sketch/index.html
@@ -17,7 +17,7 @@
                     min="10" max="100" value="10">
             </div>
         </div>
-        <div class="grid"></div>
+        <div class="grid flex-column"></div>
     </div>
 </body>
 </html>
