Generate static HTML; remove generating logic

--- a/005-calculator/index.html
+++ b/005-calculator/index.html
@@ -8,6 +8,37 @@
     <script src="./sources.js" defer></script>
 </head>
 <body class="flex">
-    <div class="flex-column" id="root"></div>
+    <div class="flex-column" id="root">
+        <div class="button-row flex">
+            <div class="flex-column" id="display">
+                <div class="display-text" id="upper">123456789012 +</div>
+                <div class="display-text" id="lower">3.14159</div>
+            </div>
+        </div>
+        <div class="button-row flex">
+            <div class="button flex">7</div>
+            <div class="button flex">8</div>
+            <div class="button flex">9</div>
+            <div class="button flex">÷</div>
+        </div>
+        <div class="button-row flex">
+            <div class="button flex">4</div>
+            <div class="button flex">5</div>
+            <div class="button flex">6</div>
+            <div class="button flex">×</div>
+        </div>
+        <div class="button-row flex">
+            <div class="button flex">1</div>
+            <div class="button flex">2</div>
+            <div class="button flex">3</div>
+            <div class="button flex">-</div>
+        </div>
+        <div class="button-row flex">
+            <div class="button flex">=</div>
+            <div class="button flex">.</div>
+            <div class="button flex">0</div>
+            <div class="button flex">+</div>
+        </div>
+    </div>
 </body>
 </html>
