--- a/005-calculator/index.html
+++ b/005-calculator/index.html
@@ -22,28 +22,28 @@
             </div>
         </div>
         <div class="button-row flex">
-            <div class="button flex">7</div>
-            <div class="button flex">8</div>
-            <div class="button flex">9</div>
-            <div class="button flex">÷</div>
+            <div class="button flex numeric">7</div>
+            <div class="button flex numeric">8</div>
+            <div class="button flex numeric">9</div>
+            <div class="button flex operator">÷</div>
         </div>
         <div class="button-row flex">
-            <div class="button flex">4</div>
-            <div class="button flex">5</div>
-            <div class="button flex">6</div>
-            <div class="button flex">×</div>
+            <div class="button flex numeric">4</div>
+            <div class="button flex numeric">5</div>
+            <div class="button flex numeric">6</div>
+            <div class="button flex operator">×</div>
         </div>
         <div class="button-row flex">
-            <div class="button flex">1</div>
-            <div class="button flex">2</div>
-            <div class="button flex">3</div>
-            <div class="button flex">-</div>
+            <div class="button flex numeric">1</div>
+            <div class="button flex numeric">2</div>
+            <div class="button flex numeric">3</div>
+            <div class="button flex operator">-</div>
         </div>
         <div class="button-row flex">
-            <div class="button flex">=</div>
-            <div class="button flex">0</div>
-            <div class="button flex">.</div>
-            <div class="button flex">+</div>
+            <div class="button flex operator">=</div>
+            <div class="button flex numeric">0</div>
+            <div class="button flex numeric">.</div>
+            <div class="button flex operator">+</div>
         </div>
     </div>
 </body>
