Add clear and backspace buttons

--- a/005-calculator/index.html
+++ b/005-calculator/index.html
@@ -20,6 +20,10 @@
             <div class="display-text" id="lower">3.14159</div>
         </div>
         <div class="button-row flex">
+            <div class="button flex operator">C</div>
+            <div class="button flex operator">←</div>
+        </div>
+        <div class="button-row flex">
             <div class="button flex numeric">7</div>
             <div class="button flex numeric">8</div>
             <div class="button flex numeric">9</div>
