--- a/005-calculator/index.html
+++ b/005-calculator/index.html
@@ -16,8 +16,8 @@
 <body class="flex">
     <div class="flex-column" id="root">
         <div class="flex-column" id="display">
-            <pre class="display-text" id="upper">123456789012 +</pre>
-            <pre class="display-text" id="lower">3.14159</pre>
+            <pre class="display-text" id="upper"> </pre>
+            <pre class="display-text" id="lower"> </pre>
         </div>
         <div class="button-row flex">
             <div class="button flex operator">C</div>
