Accept suggestion: find buttons by ID instead of text content

--- a/005-calculator/index.html
+++ b/005-calculator/index.html
@@ -20,32 +20,32 @@
             <pre class="display-text" id="lower"> </pre>
         </div>
         <div class="button-row flex">
-            <div class="button flex operator">C</div>
-            <div class="button flex operator">←</div>
+            <div class="button flex operator" id="clear">C</div>
+            <div class="button flex operator" id="backspace">←</div>
         </div>
         <div class="button-row flex">
-            <div class="button flex numeric">7</div>
-            <div class="button flex numeric">8</div>
-            <div class="button flex numeric">9</div>
-            <div class="button flex operator">÷</div>
+            <div class="button flex numeric" id="seven">7</div>
+            <div class="button flex numeric" id="eight">8</div>
+            <div class="button flex numeric" id="nine">9</div>
+            <div class="button flex operator" id="divide">÷</div>
         </div>
         <div class="button-row flex">
-            <div class="button flex numeric">4</div>
-            <div class="button flex numeric">5</div>
-            <div class="button flex numeric">6</div>
-            <div class="button flex operator">×</div>
+            <div class="button flex numeric" id="four">4</div>
+            <div class="button flex numeric" id="five">5</div>
+            <div class="button flex numeric" id="six">6</div>
+            <div class="button flex operator" id="multiply">×</div>
         </div>
         <div class="button-row flex">
-            <div class="button flex numeric">1</div>
-            <div class="button flex numeric">2</div>
-            <div class="button flex numeric">3</div>
-            <div class="button flex operator">-</div>
+            <div class="button flex numeric" id="one">1</div>
+            <div class="button flex numeric" id="two">2</div>
+            <div class="button flex numeric" id="three">3</div>
+            <div class="button flex operator" id="subtract">-</div>
         </div>
         <div class="button-row flex">
-            <div class="button flex operator">=</div>
-            <div class="button flex numeric">0</div>
-            <div class="button flex numeric">.</div>
-            <div class="button flex operator">+</div>
+            <div class="button flex operator" id="equals">=</div>
+            <div class="button flex numeric" id="zero">0</div>
+            <div class="button flex numeric" id="decimal">.</div>
+            <div class="button flex operator" id="add">+</div>
         </div>
     </div>
 </body>
