--- a/006-sign-up-form/index.html
+++ b/006-sign-up-form/index.html
@@ -43,10 +43,54 @@
         </p>
       </div>
     </div>
-    <div class="sign-up-form">
+    <form action="" method="POST">
+      <div class="input-card">
+        <p>Let's do this!</p>
 
-    </div>
+        <div class="input-row">
+          <div class="input-stack">
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name" name="first-name">
+          </div>
+
+          <div class="input-stack">
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name" name="last-name">
+          </div>
+        </div>
+
+        <div class="input-row">
+          <div class="input-stack">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email">
+          </div>
+
+          <div class="input-stack">
+            <label for="phone-number">Phone Number</label>
+            <input type="tel" id="phone-number" name="phone-number">
+          </div>
+        </div>
+
+        <div class="input-row">
+          <div class="input-stack">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password">
+          </div>
+
+          <div class="input-stack">
+            <label for="password-confirm">Confirm Password</label>
+            <input type="password" id="password-confirm" name="password-confirm">
+          </div>
+        </div>
+      </div>
+      <button type="submit">Create Account</button>
+    </form>
+    <p>Already have an account? <a href="">Log in</a></p>
   </div>
+  <script>
+    document.querySelector('#first-name').value = 'Thor';
+    document.querySelector('#last-name').value = 'Odinson';
+  </script>
 </body>
 
 </html>
