--- a/006-sign-up-form/index.html
+++ b/006-sign-up-form/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./styles.css">
+  <script src="./sources.js" defer></script>
 </head>
 
 <body>
@@ -50,19 +51,19 @@
         <div class="input-row">
           <div class="input-stack">
             <label for="first-name">First Name</label>
-            <input type="text" id="first-name" name="first-name">
+            <input type="text" id="first-name" name="first-name" required>
           </div>
 
           <div class="input-stack">
             <label for="last-name">Last Name</label>
-            <input type="text" id="last-name" name="last-name">
+            <input type="text" id="last-name" name="last-name" required>
           </div>
         </div>
 
         <div class="input-row">
           <div class="input-stack">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" required>
           </div>
 
           <div class="input-stack">
@@ -74,12 +75,13 @@
         <div class="input-row">
           <div class="input-stack">
             <label for="password">Password</label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" required>
+            <div id="passwords-do-not-match"></div>
           </div>
 
           <div class="input-stack">
             <label for="password-confirm">Confirm Password</label>
-            <input type="password" id="password-confirm" name="password-confirm">
+            <input type="password" id="password-confirm" name="password-confirm" required>
           </div>
         </div>
       </div>
@@ -87,10 +89,6 @@
     </form>
     <p>Already have an account? <a href="">Log in</a></p>
   </div>
-  <script>
-    document.querySelector('#first-name').value = 'Thor';
-    document.querySelector('#last-name').value = 'Odinson';
-  </script>
 </body>
 
 </html>
