Add placeholder text to email and phone

--- a/006-sign-up-form/index.html
+++ b/006-sign-up-form/index.html
@@ -63,12 +63,12 @@
         <div class="input-row">
           <div class="input-stack">
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" placeholder="odin@example.com" required>
           </div>
 
           <div class="input-stack">
             <label for="phone-number">Phone Number</label>
-            <input type="tel" id="phone-number" name="phone-number">
+            <input type="tel" id="phone-number" name="phone-number" maxlength="14" placeholder="(888) 800-8000">
           </div>
         </div>
 
