Add header to dashboard

--- a/007-admin-dashboard/index.html
+++ b/007-admin-dashboard/index.html
@@ -40,7 +40,29 @@
       </ul>
     </div>
     <div class="header">
-
+      <div class="search">
+        <img src="icons/magnify.svg" class="icon">
+        <input type="search">
+      </div>
+      <div class="notifications">
+        <img src="icons/bell-ring-outline.svg" alt="Notifications" class="icon">
+        <div class="profile-image"></div>
+        <p>Morgan Oakley</p>
+      </div>
+      <div class="welcome-banner">
+        <div class="profile-image"></div>
+        <div class="message">
+          <p class="greeting">Hi there,</p>
+          <p class="username">Morgan Oakley (@morgan)</p>
+        </div>
+      </div>
+      <div class="actions">
+        <ul>
+          <li><div class="button">New</div></li>
+          <li><div class="button">Upload</div></li>
+          <li><div class="button">Share</div></li>
+        </ul>
+      </div>
     </div>
     <div class="content">
 
