--- a/007-admin-dashboard/index.html
+++ b/007-admin-dashboard/index.html
@@ -65,7 +65,24 @@
       </div>
     </div>
     <div class="content">
+      <div class="projects">
+        <h2>Your Projects</h2>
+        <div class="card-container">
 
+        </div>
+      </div>
+      <div class="announcements">
+        <h2>Announcements</h2>
+        <div class="card-container">
+
+        </div>
+      </div>
+      <div class="trending">
+        <h2>Trending</h2>
+        <div class="card-container">
+
+        </div>
+      </div>
     </div>
   </div>
 </body>
