Generate primary content using JavaScript
- Added content to projects section.
- Moved content from announcements and trending sections out of HTML
  and into JavaScript.

--- a/007-admin-dashboard/index.html
+++ b/007-admin-dashboard/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="./styles.css">
+  <script src="./sources.js" defer></script>
 </head>
 
 <body>
@@ -68,62 +69,19 @@
       <div class="projects">
         <h2>Your Projects</h2>
         <div class="card-container">
-          <div class="project card"></div>
-          <div class="project card"></div>
-          <div class="project card"></div>
-          <div class="project card"></div>
-          <div class="project card"></div>
-          <div class="project card"></div>
+          <!-- Projects will be injected by JS -->
         </div>
       </div>
       <div class="announcements">
         <h2>Announcements</h2>
         <div class="card">
-          <div class="announcement-card">
-            <div class="title">Site Maintenance</div>
-            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore et totam explicabo odit quam atque optio molestiae ut perspiciatis eaque.</div>
-          </div>
-          <div class="announcement-card">
-            <div class="title">Community Share Day</div>
-            <div class="summary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem voluptas, repellendus dolorum possimus delectus voluptatibus praesentium laboriosam nesciunt at aliquam.</div>
-          </div>
-          <div class="announcement-card">
-            <div class="title">Updated Privacy Policy</div>
-            <div class="summary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio non, recusandae magni dolorem perferendis odio facilis velit ullam alias omnis!</div>
-          </div>
+          <!-- Announcements will be injected by JS -->
         </div>
       </div>
       <div class="trending">
         <h2>Trending</h2>
         <div class="card">
-          <div class="trending-project">
-            <div class="profile-image"></div>
-            <div>
-              <p class="user-tag">@tegan</p>
-              <p class="project-name">World Peace Builder</p>
-            </div>
-          </div>
-          <div class="trending-project">
-            <div class="profile-image"></div>
-            <div>
-              <div class="user-tag">@morgan</div>
-              <div class="project-name">Super Cool Project</div>
-            </div>
-          </div>
-          <div class="trending-project">
-            <div class="profile-image"></div>
-            <div>
-              <div class="user-tag">@kendall</div>
-              <div class="project-name">Life Changing Project</div>
-            </div>
-          </div>
-          <div class="trending-project">
-            <div class="profile-image"></div>
-            <div>
-              <div class="user-tag">@alex</div>
-              <div class="project-name">No Traffic Maker</div>
-            </div>
-          </div>
+          <!-- Trending projects will be injected by JS -->
         </div>
       </div>
     </div>
