Improve search bar appearance and interaction

--- a/007-admin-dashboard/index.html
+++ b/007-admin-dashboard/index.html
@@ -41,10 +41,10 @@
       </ul>
     </div>
     <div class="header">
-      <div class="search">
-        <img src="icons/magnify.svg" class="icon">
-        <input type="search">
-      </div>
+      <form action="" method="GET" class="search">
+          <label for="search"><img src="icons/magnify.svg" class="icon"></label>
+          <input type="search" id="search">
+      </form>
       <div class="notifications">
         <img src="icons/bell-ring-outline.svg" alt="Notifications" class="icon">
         <div class="profile-image"></div>
