Add user icons to header

--- a/007-admin-dashboard/index.html
+++ b/007-admin-dashboard/index.html
@@ -47,11 +47,15 @@
       </form>
       <div class="notifications">
         <img src="icons/bell-ring-outline.svg" alt="Notifications" class="icon">
-        <div class="profile-image"></div>
+        <div class="profile-image">
+          <img src="images/cat-4475583_640.png">
+        </div>
         <p>Morgan Oakley</p>
       </div>
       <div class="welcome-banner">
-        <div class="profile-image"></div>
+        <div class="profile-image">
+          <img src="images/cat-4475583_640.png">
+        </div>
         <div class="message">
           <p class="greeting">Hi there,</p>
           <p class="username">Morgan Oakley (@morgan)</p>
