--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="004-etch-a-sketch/index.html">004-etch-a-sketch</a>
             <a href="005-calculator/index.html">005-calculator</a>
             <a href="006-sign-up-form/index.html">006-sign-up-form</a>
+            <a href="007-admin-dashboard/index.html">007-admin-dashboard</a>
         </div>
     </div>
 </body>
