Make header responsive to display size

--- a/008-homepage/index.html
+++ b/008-homepage/index.html
@@ -20,8 +20,9 @@
   <header>
     <div class="content">
       <div class="card">
-        <div class="image"></div>
-        <h1 class="name">Ashley Williams</h1>
+        <div class="image">
+          <h1 class="name">Ashley Williams</h1>
+        </div>
         <h2>About me</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus
