Simplify header links HTML

--- a/008-homepage/index.html
+++ b/008-homepage/index.html
@@ -32,12 +32,10 @@
           doloremque odit? Amet, labore veritatis. Fuga ea perspiciatis dolores
           eius libero odit quidem fugit, cumque aperiam!
         </p>
-        <nav class="links">
-          <ul class="flex">
-            <li><a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a></li>
-            <li><a href="#linkedin"><img src="icons/linkedin-plain.svg" class="icon flex" alt="Linked In"></a></li>
-            <li><a href="#twitter"><img src="icons/twitter-original.svg" class="icon flex" alt="Twitter"></a></li>
-          </ul>
+        <nav class="links flex">
+          <a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a>
+          <a href="#linkedin"><img src="icons/linkedin-plain.svg" class="icon flex" alt="Linked In"></a>
+          <a href="#twitter"><img src="icons/twitter-original.svg" class="icon flex" alt="Twitter"></a>
         </nav>
       </div>
     </div>
