Add multiple project cards

--- a/008-homepage/index.html
+++ b/008-homepage/index.html
@@ -45,7 +45,72 @@
       <h2>My work</h2>
       <div class="grid gap">
         <div class="project card">
-          <div class="image">screenshot of project</div>
+          <div class="image" style="background-color: #9E1C1C">screenshot of project</div>
+          <div class="details">
+            <div class="title-row">
+              <h3>Project name</h3>
+              <nav class="flex">
+                <a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a>
+                <a href="#view"><img src="icons/open-in-new.svg" class="icon flex" alt="View in new tab"></a>
+              </nav>
+            </div>
+            <div class="description">Short description of the project. Just a couple sentences will do.</div>
+          </div>
+        </div>
+        <div class="project card">
+          <div class="image" style="background-color: #7C75CA">screenshot of project</div>
+          <div class="details">
+            <div class="title-row">
+              <h3>Project name</h3>
+              <nav class="flex">
+                <a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a>
+                <a href="#view"><img src="icons/open-in-new.svg" class="icon flex" alt="View in new tab"></a>
+              </nav>
+            </div>
+            <div class="description">Short description of the project. Just a couple sentences will do.</div>
+          </div>
+        </div>
+        <div class="project card">
+          <div class="image" style="background-color: #5E8F4D">screenshot of project</div>
+          <div class="details">
+            <div class="title-row">
+              <h3>Project name</h3>
+              <nav class="flex">
+                <a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a>
+                <a href="#view"><img src="icons/open-in-new.svg" class="icon flex" alt="View in new tab"></a>
+              </nav>
+            </div>
+            <div class="description">Short description of the project. Just a couple sentences will do.</div>
+          </div>
+        </div>
+        <div class="project card">
+          <div class="image" style="background-color: #C363B4">screenshot of project</div>
+          <div class="details">
+            <div class="title-row">
+              <h3>Project name</h3>
+              <nav class="flex">
+                <a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a>
+                <a href="#view"><img src="icons/open-in-new.svg" class="icon flex" alt="View in new tab"></a>
+              </nav>
+            </div>
+            <div class="description">Short description of the project. Just a couple sentences will do.</div>
+          </div>
+        </div>
+        <div class="project card">
+          <div class="image" style="background-color: #D88F39">screenshot of project</div>
+          <div class="details">
+            <div class="title-row">
+              <h3>Project name</h3>
+              <nav class="flex">
+                <a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a>
+                <a href="#view"><img src="icons/open-in-new.svg" class="icon flex" alt="View in new tab"></a>
+              </nav>
+            </div>
+            <div class="description">Short description of the project. Just a couple sentences will do.</div>
+          </div>
+        </div>
+        <div class="project card">
+          <div class="image" style="background-color: #4BA2D2">screenshot of project</div>
           <div class="details">
             <div class="title-row">
               <h3>Project name</h3>
