Add missing footer information

--- a/008-homepage/index.html
+++ b/008-homepage/index.html
@@ -127,19 +127,22 @@
   </main>
   <footer>
     <div class="content">
-      <h2>Contact me</h2>
-      <p>Please get in touch if you think our work could be mutually beneficial!</p>
-      <address>
-        123 Main St<br>
-        Springfield, IL 12345
-      </address>
-      <nav>
-        <ul class="flex">
-          <li><a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a></li>
-          <li><a href="#linkedin"><img src="icons/linkedin-plain.svg" class="icon flex" alt="Linked In"></a></li>
-          <li><a href="#twitter"><img src="icons/twitter-original.svg" class="icon flex" alt="Twitter"></a></li>
-        </ul>
-      </nav>
+      <div class="contact-me">
+        <h2>Contact me</h2>
+        <p>Please get in touch if you think our work could be mutually beneficial!</p>
+        <address>
+          123 Random Road<br>
+          Random Town, California 12345
+        </address>
+        <span><img src="icons/phone.svg" class="icon" alt="Phone">555-555-5555</span>
+        <span><img src="icons/email-outline.svg" class="icon" alt="Email">ashleywilliams.is.not.real@gmail.com</span>
+        <nav class="flex">
+          <a href="#github"><img src="icons/github-original.svg" class="icon flex" alt="Github"></a>
+          <a href="#linkedin"><img src="icons/linkedin-plain.svg" class="icon flex" alt="Linked In"></a>
+          <a href="#twitter"><img src="icons/twitter-original.svg" class="icon flex" alt="Twitter"></a>
+        </nav>
+      </div>
+      <div class="image"></div>
     </div>
   </footer>
 </body>
