--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="005-calculator/index.html">005-calculator</a>
             <a href="006-sign-up-form/index.html">006-sign-up-form</a>
             <a href="007-admin-dashboard/index.html">007-admin-dashboard</a>
+            <a href="009-library/dist/index.html">009-library</a>
         </div>
     </div>
 </body>
