deploy: add tic-tac-toe to homepage

--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>pricebenjamin/top-projects</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body class="flex-column">
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body class="flex-column">
     <div class="content flex-column managed-width">
-        <div class="title">pricebenjamin/top-projects</div>
-        <div class="links flex">
-            <a href="001-recipes/index.html">001-recipes</a>
-            <a href="002-landing-page/index.html">002-landing-page</a>
-            <a href="003-rock-paper-scissors/index.html">003-rock-paper-scissors</a>
-            <a href="004-etch-a-sketch/index.html">004-etch-a-sketch</a>
-            <a href="005-calculator/index.html">005-calculator</a>
-            <a href="006-sign-up-form/index.html">006-sign-up-form</a>
-            <a href="007-admin-dashboard/index.html">007-admin-dashboard</a>
-            <a href="009-library/dist/index.html">009-library</a>
-        </div>
+      <div class="title">pricebenjamin/top-projects</div>
+      <div class="links flex">
+        <a href="001-recipes/index.html">001-recipes</a>
+        <a href="002-landing-page/index.html">002-landing-page</a>
+        <a href="003-rock-paper-scissors/index.html">003-rock-paper-scissors</a>
+        <a href="004-etch-a-sketch/index.html">004-etch-a-sketch</a>
+        <a href="005-calculator/index.html">005-calculator</a>
+        <a href="006-sign-up-form/index.html">006-sign-up-form</a>
+        <a href="007-admin-dashboard/index.html">007-admin-dashboard</a>
+        <a href="009-library/dist/index.html">009-library</a>
+        <a href="010-tic-tac-toe/dist/index.html">010-tic-tac-toe</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
