deploy: add todo app to homepage

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="007-admin-dashboard/index.html">007-admin-dashboard</a>
         <a href="009-library/dist/index.html">009-library</a>
         <a href="010-tic-tac-toe/dist/index.html">010-tic-tac-toe</a>
+        <a href="011-todo-list/dist/index.html">011-todo-list</a>
       </div>
     </div>
   </body>
