deploy: add homepage project to homepage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="005-calculator/index.html">005-calculator</a>
         <a href="006-sign-up-form/index.html">006-sign-up-form</a>
         <a href="007-admin-dashboard/index.html">007-admin-dashboard</a>
+        <a href="008-homepage/index.html">008-homepage</a>
         <a href="009-library/dist/index.html">009-library</a>
         <a href="010-tic-tac-toe/dist/index.html">010-tic-tac-toe</a>
         <a href="011-todo-list/dist/index.html">011-todo-list</a>
