deploy: add battleship to homepage

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="009-library/dist/index.html">009-library</a>
         <a href="010-tic-tac-toe/dist/index.html">010-tic-tac-toe</a>
         <a href="011-todo-list/dist/index.html">011-todo-list</a>
+        <a href="014-battleship/dist/index.html">014-battleship</a>
       </div>
     </div>
   </body>
